* remove last date temporary to prevent wrap to next line

--- a/Assets/gantt.css
+++ b/Assets/gantt.css
@@ -6,7 +6,9 @@ div.ganttview-hzheader-month, div.ganttview-hzheader-day, div.ganttview-vtheader
 }
 
 div.ganttview-vtheader-title {
-    height: 40px;
+    height: 41px;
+    font-size: small;
+    color: red;
 }
 
 div.ganttview-hzheader-month, div.ganttview-hzheader-day {
@@ -27,6 +29,7 @@ div.ganttview-hzheader-month {
     border-right: 1px solid #d0d0d0;
     line-height: 20px;
     overflow: hidden;
+    font-size: x-small
 }
 
 div.ganttview-hzheader-day {
@@ -36,6 +39,7 @@ div.ganttview-hzheader-day {
     border-top: 1px solid #d0d0d0;
     line-height: 20px;
     color: #555;
+    font-size: xx-small
 }
 
 div.ganttview-vtheader {
